Fix scrolling to end of visible code text
The code container is not the same size as the viewable text. This is a
result of the gesture pad being displayed over the text which results in
the cursor not being visible when scrolled to end of the doc. The height
of the code text container - CodeMirror class - should be the reamining
space after the header and GesturePad heights have been set.

--- a/src/interface/Interface.module.css
+++ b/src/interface/Interface.module.css
@@ -62,6 +62,6 @@
         flex-wrap: wrap;
         height: 98vh;
         width: 100%;
-        background: #F9F9F9;
+        /* background: #F9F9F9; */
     }
 }
